--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Stampac</string>
+    <string name="underline">Underline</string>
+    <string name="bold">Bold</string>
+    <string name="left">Left</string>
+    <string name="print_by_tcp">Print by TCP !</string>
+    <string name="alignment">Alignment:</string>
+    <string name="center">Center</string>
+    <string name="right">Right</string>
+    <string name="print_by_usb">Print by USB !</string>
+    <string name="print_by_bluetooth">Print by bluetooth !</string>
+    <string name="ip">IP :</string>
+    <string name="default_printer">Default printer</string>
+    <string name="port">Port :</string>
+    <string name="click_to_print">Click to print !</string>
 </resources>
